--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "push": "git add . & git commit -m first commit & git push origin main"
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
