--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "push": "git add . & git commit -m first commit & git push origin main"
+    "lint": "next lint"
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
@@ -16,6 +15,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-scroll": "^1.8.9",
     "tailwindcss": "3.3.2"
   }
 }
